...
                    ),
                  );
                },
              ),
              SizedBox(height: 15),
              FloatingActionButton(
                key: Key("Start"),
                child: Text(state.currentChronoButtonLabel),
                onPressed: () {
                  if (state.currentStopWatch.isRunning) {
                    state.currentStopWatch.stop();
                    setState(() {
                      StoreProvider.of<AppState>(context)
...
                      StoreProvider.of<AppState>(context)
                          .dispatch(StartRun(currentUserRun));
                    }
                    state.currentStopWatch.start();
                    setState(() {
                      StoreProvider.of<AppState>(context)
                          .dispatch(ChronoButtonLabel("Pause"));

                      state.currentMapController.moveCamera(
                          CameraUpdate.newLatLngZoom(
                              LatLng(state.currentPosition.latitude,
                                  state.currentPosition.longitude),
                              16));
...
                    });
                  }
                },
              ),
              SizedBox(height: 15),
              FloatingActionButton(
                key: Key("Stop"),
                child: Text("Stop"),
                onPressed: () {
                  if (state.currentStopWatch.elapsed.inMicroseconds > 0.0) {
                    setState(() {
                      state.currentStopWatch.stop();
                      StoreProvider.of<AppState>(context)
...
